<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_uav_parameters</name>
  <version>0.8.0</version>
  <description>A parameter server for the ROS2 UAV nodes</description>
  <maintainer email="damien@robotsix.net">Damien SIX</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>yaml-cpp</depend>
  <depend>ros2_uav_interfaces</depend>
  <depend>uav_cpp</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
  </export>
</package>